# home-base

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  trmnl_finance_update.yml  trmnl_update.yml  weekly_briefing.yml
agent/: amion.py  briefing.py  config.py  main.py  models.py  trmnl_finance_update.py  trmnl_update.py
agent/briefing/: package.json  tsconfig.json
agent/briefing/src/: briefing-data.ts  config.ts  data-fetch.ts  email-template.ts  gmail-send.ts  google-token.ts  index.ts  narrative.ts  week-window.ts
agent/collectors/: asana.py  calendar.py  market_data.py  weather.py
agent/publishers/: calendar_invites.py  email.py  trmnl.py  trmnl_finance.py
agent/publishers/templates/: briefing.html.j2
assets/: index-CJwQ1EnQ.js  index-D5CZvOuN.css  index-uJtYs1L2.js
docs/superpowers/plans/: 2026-04-27-web-visual-modernization.md
docs/superpowers/specs/: 2026-04-27-web-visual-modernization-design.md
scripts/: generate_token.py  setup_secrets.sh
shared/: package.json  tsconfig.json
shared/src/: asana.ts  gus-care.ts  homebase-events.ts  index.ts  overrides.ts  types.ts
shared/src/calendar/: io.ts  process.ts
supabase/.temp/: pooler-url  project-ref
supabase/functions/google-token-refresh/: index.ts
supabase/migrations/: 0002_homebase_events.sql  001_calendar_overrides_and_google_tokens.sql
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: 404.html
web/src/: App.tsx  index.css
(+42 files in other folders)
