[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-base"
version = "0.1.0"
description = "Personal Sunday briefing agent for Nat Duncan"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
